# Copyright 2021-present Kensho Technologies, LLC.
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pydiardecode"
version = "0.1.0"
description = "CTC beam search decoder for speech recognition."
readme = "README.md"
requires-python = ">=3.7"
authors =  [
    {name = "Kensho Technologies, LLC.", email = "pyctcdecode-maintainer@kensho.com"},
]
# Apache 2.0
license = {file = "LICENSE"}

dependencies = [
    "numpy>=1.15.0,<2.0.0",
    "pygtrie>=2.1,<3.0",
    "importlib-metadata<5;python_version=='3.7'",
]

[project.urls]
source = "https://github.com/tango4j/pydiardecode"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "flake8",
    "huggingface-hub",
    "hypothesis>=6.14,<7",
    "isort>=5.0.0,<6",
    "jupyter",
    "mypy",
    "nbconvert",
    "nbformat",
    "pydocstyle",
    "pylint",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["pydiardecode"]

[tool.black]
line-length = 100

[tool.poetry]
name = "pydiardecode"  # Make sure this is correct
version = "0.1.0"
description = "Forked from pyctcdecode"
authors = ["Taejin Park <taejinp@nvidia.com>"]
